# codice-fiscale

./: Cargo.toml  README.md  build.rs
benches/: generate.rs
data/: active_places.csv  countries.json  inactive_places.csv  jq_commands.md  municipalities.json
src/: codice_fiscale.rs  lib.rs  main.rs  string.rs
